# esp32-screen-hub

./: .clang-format  .gitignore  CMakeLists.txt  README.md  partitions.csv  readme.md  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml
main/common/: app_events.h  sensirion_utils.c  sensirion_utils.h
main/http/: http_service.c  http_service.h
main/i2c_bus/: i2c_bus.c  i2c_bus.h
main/i2c_utils/: i2c_utils.c  i2c_utils.h
main/net/: net_manager.c  net_manager.h
main/port_a_i2c/: port_a_i2c.c  port_a_i2c.h  port_a_i2c_readings.c  port_a_i2c_readings.h  port_a_i2c_service.c  port_a_i2c_service.h  port_a_i2c_types.h
main/port_i2c/: port_i2c.c  port_i2c.h  port_i2c_readings.c  port_i2c_service.c  port_i2c_service.h  port_i2c_types.h
main/power_aw9523/: power_aw9523.c  power_aw9523.h
main/sgp30/: sgp30.c  sgp30_task.c  sgp30_task.h
main/sht40/: sht40.c  sht40.h  sht40_task.c  sht40_task.h
main/sntp/: sntp.c  sntp.h
main/stocks/: stocks_task.c  stocks_task.h
main/ui/: ui.c  ui.h  ui_clock.c  ui_screens.h  ui_stats.c  ui_stocks.c  ui_task.c  ui_task.h  ui_weather.c
main/ui/assets/: fa_microchip_16.c
main/weather/: weather_task.c  weather_task.h
