idf_component_register(
    SRCS
        "app_main.c"
        "net/net_manager.c"
        "http/http_service.c"
        "weather/weather_task.c"
        "sht40/sht40.c"
        "i2c_utils/i2c_utils.c"
        "power_aw9523/power_aw9523.c"
        "port_i2c/port_i2c.c"
        "port_i2c/port_i2c_service.c"
        "port_i2c/port_i2c_readings.c"
        "sgp30/sgp30.c"
        "sntp/sntp.c"
        "common/sensirion_utils.c"
        "ui/ui.c"
    INCLUDE_DIRS
        "."
        "common"
        "net"
        "http"
        "weather"
        "sht40"
        "i2c_utils"
        "power_aw9523"
        "port_i2c"
        "sgp30"
        "sntp"
        "ui"
    REQUIRES
        esp_wifi
        esp_event
        esp_netif
        nvs_flash
        esp_http_client
        driver
        esp_driver_gpio
        m5stack_core_s3
)
